New in spot 2.5.3.dev  (not yet released)

  Command-line tools:

  - autcross' tool specifications now have %M replaced by the name of
    the input automaton.

  Library:

  - Option "a" of print_dot(), for printing the acceptance condition,
    is now enabled by default.  Option "A", introduced in Spot 2.4,
    can be used to hide the acceptance condition in case you do not
    want it.  This change of course affects the --dot option of all
    the command-line tools, as well as the various way to display
    automata using the Python bindings.

  - When option "1" is passed to print_dot() to hide state names
    and force the display of state numbers, the actual state names
    is now moved to the "tooltip" field of the state.  The SVG
    files produced by "dot -Tsvg" will show those as popups.
    This is also done for state labels of kripke structures.

  - print_dot() will now name the output digraph using the name of the
    automaton if available, or the empty string otherwise.  (Previous
    versions used to call all digraphs "G".)  This name appears as a
    tooltip in SVG figures when the mouse is over the acceptance
    condition.

  - print_dot() has a new option "u" to hide "true states" behind
    "exiting transitions".  This can be used to display alternating
    automata in a way many people expect.

  - print_dot() has a new option "K" to cancel the effect of "k"
    (which uses state labels whenever possible).  This is most useful
    when one want to force transition-labeling of a Kripke structure,
    where "k" is usually the default.

  - cleanup_parity() and cleanup_parity_here() are smarter and now
    remove from the acceptance condition the parity colors that are
    not used in the automaton.

  - twa_graph::purge_unreachable_states() now takes a function which
    is called with the new numbering of states. This is useful to
    update an external structure that references states of the twa
    that we want to purge.
